tests/ui/half-open-range-patterns/half-open-range-pats-inclusive-match-arrow.stderr
error: unexpected `>` after inclusive range
  --> $DIR/half-open-range-pats-inclusive-match-arrow.rs:8:14
   |
LL |         74..=> {},
   |           ---^
   |           |
   |           this is parsed as an inclusive range `..=`
   |
help: add a space between the pattern and `=>`
   |
LL |         74.. => {},
   |             +

error[E0004]: non-exhaustive patterns: `i32::MIN..=-1_i32` not covered
  --> $DIR/half-open-range-pats-inclusive-match-arrow.rs:3:11
   |
LL |     match x {
   |           ^ pattern `i32::MIN..=-1_i32` not covered
   |
   = note: the matched value is of type `i32`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         74..=> {},
LL ~         i32::MIN..=-1_i32 => todo!(),
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
